# kaggle-f1-pitstop

./: .env.example  .gitignore  CHANGELOG.md  README.md  REPRODUCE.md  case-study.html  case-study.md  project.md  pyproject.toml  reproduce.sh
data/: leaderboard.html
docs/: dataset.md  dataset_review_no_leak.md  diagnostic_within_year_inflation.md  eda.md  experiments.md  feature_engineering.md  plateau_analysis.md  transfer_analysis.md
experiments/: 001_calibration_fixes.md  002_drop_zero_gain.md  003_hard_compound_features.md  004_catboost_diversity.md  005_catboost_tuning.md  006_hard_compound_v2.md  007_peer_rank_features.md  008_error_bucket_eda.md  009_pit_cluster_saturation.md  010_stacking.md  011_cb_redesign.md  012_cb_tuned_external_data.md  013_residual_eda_post_cycle12.md  014_iter_cap_and_digit_features.md  015_multiseed_cb_tuned.md  016_realmlp_pytabkit.md  017_realmlp_multiseed.md  018_forward_features.md  019_historical_driver_features.md  020_ft_transformer.md  021_realmlp_hp_search.md  022_rankblend_probe.md  023_3way_blend_probe.md  024_autogluon_tabular.md  025_lgb_richfe.md  026_pseudo_labeling.md  027_year2022_specialist.md  028_cb_rich_categorical_fe.md  029_advanced_blend_operators.md  030_cycle10_diagnostics.md  031_cb_rich_slim.md  032_cb_no_balanced.md  033_cb_class_weights_gpu.md  034_xgboost_3rd_base.md  035_cb_multiseed.md  036_per_slice_blend.md  037_quantile_blend.md  038_stack_meta.md  039_realmlp_subset.md  040_3way_cb_variants.md  (+49 more)
gpu-kernels/: README.md  cycle11_kaggle_gpu.py  cycle16_kaggle_gpu.py  cycle16_xgb_advweight_gpu.py  (+11 more)
(+112 files in other folders)
