[project]
name = "kaggle-f1-pitstop"
version = "0.1.0"
description = "Kaggle Playground S6E5 — F1 pit-stop prediction (binary classification, ROC-AUC)"
requires-python = ">=3.12"
dependencies = [
    "catboost>=1.2.7",
    "jupyterlab>=4.5.7",
    "kaggle>=2.1.2",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.9",
    "optuna>=4.0.0",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "polars>=1.40.1",
    "pyarrow>=24.0.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "torch>=2.4.0",
    "pytabkit>=1.4.0",
    "xgboost",
]
